--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,16 +29,12 @@ jobs:
         with:
          version: 12
          
-      - name: GitHub Action for Yarn
-        uses: Borales/actions-yarn@v2.3.0
-        with:
-          cmd: install
-          
+
       - name: creating build
-        run: yarn build
+        run: npm run build
           
       - name: installing surge
-        run: yarn add surge      
+        run: npm install --global surge   
         
       - name: deploying to surge
         run: surge ./build kindly-edgeed.surge.sh --token ${{SURGE_TOKEN}}    
