--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -37,4 +37,4 @@ jobs:
         run: npm install --global surge   
         
       - name: deploying to surge
-        run: surge ./build kindly-edgeed.surge.sh --token ${{SURGE_TOKEN}}    
+        run: surge ./build kindly-edgeed.surge.sh --token ${{ secrets.SURGE_TOKEN }}    
