--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,7 +6,7 @@ name: Shopping Basket Application
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ Master ]
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -33,7 +33,7 @@ jobs:
          install
           
     - name: Creating build
-      run: yarn build
+      run: sudo yarn build
       
     # Runs a set of commands using the runners shell
     - name: Installing surge
