--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -54,7 +54,7 @@ jobs:
         registry-url: # optional
         
     - name: Creating build
-      run: npm run build
+      run: sudo npm run build
       
     # Runs a set of commands using the runners shell
     - name: Installing surge
