--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -58,7 +58,7 @@ jobs:
       
     # Runs a set of commands using the runners shell
     - name: Installing surge
-      run: sudo npm install surge
+      run: sudo npm install --global surge
 
     - name: deploying surge
       run: surge ./build https://bouncy-visitor.surge.sh/ --token ${{ secrets.SURGE_TOKEN }}
